force-app/main/default/objects/RC_Number_History__c/RC_Number_History__c.object-meta.xml
<CustomObject>
    <label>RC Number History</label>
    <nameField>
        <displayFormat>RCH-{000000}</displayFormat>
        <label>RC Number History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RC Number Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>