force-app/main/default/objects/RC_Number_History__c/fields/Appt_Rep__c.field-meta.xml
<CustomField>
    <fullName>Appt_Rep__c</fullName>
    <formula>Service_Appointment__r.Owner:User.FirstName +&apos; &apos;+ Service_Appointment__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appt Rep</label>
    <type>Text</type>
</CustomField>