force-app/main/default/objects/RC_Number_History__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RC Number Histories</relationshipLabel>
    <relationshipName>RC_Number_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>