force-app/main/default/objects/RC_Number_History__c/fields/Earliest_Call__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Earliest Call</label>
    <referenceTo>RC_Call_Log__c</referenceTo>
    <relationshipLabel>RC Number Histories (Earliest Call)</relationshipLabel>
    <relationshipName>RC_Number_Histories2</relationshipName>
    <type>Lookup</type>
</CustomField>