force-app/main/default/objects/RC_Number_History__c/fields/Has_SA__c.field-meta.xml
<CustomField>
    <fullName>Has_SA__c</fullName>
    <formula>IF( Service_Appointment__c != null, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has SA</label>
    <type>Checkbox</type>
</CustomField>