force-app/main/default/objects/RC_Number_History__c/fields/In_Bound_Count__c.field-meta.xml
<CustomField>
    <fullName>In_Bound_Count__c</fullName>
    <label>In Bound Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>