force-app/main/default/objects/RC_Number_History__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>RC Number Histories</relationshipLabel>
    <relationshipName>RC_Number_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>