force-app/main/default/objects/RC_Number_History__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>RC Number Histories</relationshipLabel>
    <relationshipName>RC_Number_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>