force-app/main/default/objects/RC_Number_History__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>RC Number Histories</relationshipLabel>
    <relationshipName>RC_Number_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>