force-app/main/default/objects/RC_Number_History__c/fields/Recent_Call__c.field-meta.xml
<CustomField>
    <fullName>Recent_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recent Call</label>
    <referenceTo>RC_Call_Log__c</referenceTo>
    <relationshipLabel>RC Number Histories (Recent Call)</relationshipLabel>
    <relationshipName>RC_Number_Histories1</relationshipName>
    <type>Lookup</type>
</CustomField>