force-app/main/default/objects/RC_Number_History__c/fields/Rep_Role__c.field-meta.xml
<CustomField>
    <fullName>Rep_Role__c</fullName>
    <formula>TEXT(Service_Appointment__r.Owner:User.Role__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rep Role</label>
    <type>Text</type>
</CustomField>