force-app/main/default/objects/RC_Number_History__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>RC Number Histories</relationshipLabel>
    <relationshipName>RC_Number_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>