force-app/main/default/objects/RC_Number_History__c/fields/WorkType__c.field-meta.xml
<CustomField>
    <fullName>WorkType__c</fullName>
    <formula>Service_Appointment__r.Work_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WorkType</label>
    <type>Text</type>
</CustomField>