force-app/main/default/objects/RC_Number_History__c/fields/WT__c.field-meta.xml
<CustomField>
    <fullName>WT__c</fullName>
    <formula>Service_Appointment__r.WorkType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WT</label>
    <type>Text</type>
</CustomField>