force-app/main/default/objects/RC_Number_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Phone__c</columns>
    <columns>Call_Count__c</columns>
    <columns>In_Bound_Count__c</columns>
    <columns>Out_Bound_Count__c</columns>
    <columns>Contact__c</columns>
    <columns>Earliest_Call__c</columns>
    <columns>Recent_Call__c</columns>
    <columns>Service_Appointment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>